# Cpp-3DViewer

./: CMakeLists.txt  README.md
src/: Doxyfile  Makefile  main.cc  title.md
src/controller/: VisualizationController.cc  VisualizationController.h
src/model/: AffineModel.cc  AffineModel.h  FacadeModel.cc  FacadeModel.h  GnuPlotSingleton.cc  GnuPlotSingleton.h  ObjectModel.cc  ObjectModel.h  ParserModel.cc  ParserModel.h  RequestBuilder.cc  RequestBuilder.h  VisualizationModel.cc  VisualizationModel.h  utils.cc  utils.h
src/tests/: affine_suite.cc  file_parsing_suite.cc
src/ui/: main.ui
src/view/: MainWindow.cc  MainWindow.h
